--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+{% include 'head.html' %}
 <body>
 
     <h1>UP & DOWN</h1>
+
+{% include 'header.html' %}
+
+{% block content %}
+{% endblock %}    
+
+{% include 'footer.html' %}
+
 
 </body>
 </html>
