--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,9 @@
 <div style="text-align: center">
 
-    <div>
-        <h1>UP & DOWN</h1>
+    <div style="margin: 2rem 0; font-family: 'Pacifico', cursive;">
+        <h1>Up & Down</h1>
     </div>
-    <div>
+    <div style="margin-bottom: 2rem;"
         <span>nav1</span>
         <span>nav2</span>
         <span>nav3</span>
