--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,9 @@
 <div style="text-align: center">
 
-    <div style="margin: 2rem 0; font-family: 'Pacifico', cursive;">
+    <div class="main_header_logo">
         <h1>Up & Down</h1>
     </div>
-    <div style="margin-bottom: 2rem;"
+    <div class="main_header_button">
         <span>nav1</span>
         <span>nav2</span>
         <span>nav3</span>
