--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,7 +2,38 @@
 
 {% block content %}
 
+    <style>
+        .testing {
+            background-color: brown;
+            margin: 1rem;
+            height: 48px;
+            width: 48px;
+            border-radius: .5rem;
+        }
+    </style>
+
     <div style="height: 20rem; background-color: aqua; margin: 2rem; border-radius: 1rem;">
         <h1>Hello Django project</h1>
+
+    <div class="testing" style="display: block">block</div>
+    <div class="testing" style="display: block">block</div>
+
+    <div class="testing" style="display: inline">inline</div>
+    <div class="testing" style="display: inline">inline</div>
+    <div class="testing" style="display: inline">inline</div>
+    <div class="testing" style="display: inline">inline</div>
+
+    <div class="testing" style="display: none">none</div>
+    <div class="testing" style="display: none">none</div>
+    <div class="testing" style="display: none">none</div>
+
+    <div class="testing" style="display: inline-block">inline-block</div>
+    <div class="testing" style="display: inline-block">inline-block</div>
+    <div class="testing" style="display: inline-block">inline-block</div>
+
+    <div class="testing">default</div>
+    <div class="testing">default</div>
+    <div class="testing">default</div>
+
     </div>
 {% endblock %}
