--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,26 +2,8 @@
 
 {% block content %}
 
-    <style>
-        .testing {
-            background-color: brown;
-            margin: 1rem;
-            height: 48px;
-            width: 48px;
-            border-radius: .5rem;
-            display: inline-block;
-        }
-    </style>
-
-    <div style="height: 20rem; background-color: aqua;
-     margin: 2rem; border-radius: 1rem; font-size: 2rem">
+    <div style="margin: 2rem; text-align: center;">
         <h1>Hello Django project</h1>
-
-        <div class="testing" style="height: 48px; width: 48px;">px</div>
-        <div class="testing" style="height: 3rem; width: 3rem;">rem</div>
-        <div class="testing" style="height: 3em; width: 3em;">em</div>
-        <div class="testing" style="height: 30%; width: 30%;">%</div>
-
-
+        <h3>{{ text }}</h3>
     </div>
 {% endblock %}
