apply naver nanum font

--- a/templates/head.html
+++ b/templates/head.html
@@ -14,4 +14,40 @@
 
     {#  DEFALUT CSS LINK  #}
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
+
+    {#  Naver Font LINK  #}
+    <style>
+        {#  NanumSquare  #}
+        @font-face {
+            font-family: 'NanumSquareR';
+            src: local('NanumSquareR'),
+            url("{% static 'fonts/NanumSquareR.otf' %}") format("opentype");
+        }
+        @font-face {
+            font-family: 'NanumSquareEB';
+            src: local('NanumSquareEB'),
+            url("{% static 'fonts/NanumSquareEB.otf' %}") format("opentype");
+        }
+        @font-face {
+            font-family: 'NanumSquareB';
+            src: local('NanumSquareB'),
+            url("{% static 'fonts/NanumSquareB.otf' %}") format("opentype");
+        }
+        @font-face {
+            font-family: 'NanumSquareL';
+            src: local('NanumSquareL'),
+            url("{% static 'fonts/NanumSquareL.otf' %}") format("opentype");
+        }
+        {#  NanumBarunpen  #}
+        @font-face {
+            font-family: 'NanumBarunpenB';
+            src: local('NanumBarunpenB'),
+            url("{% static 'fonts/NanumBarunpenB.otf' %}") format("opentype");
+        }
+        @font-face {
+            font-family: 'NanumBarunpenR';
+            src: local('NanumBarunpenR'),
+            url("{% static 'fonts/NanumBarunpenR.otf' %}") format("opentype");
+        }
+    </style>
 </head>
