--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include 'head.html' %}
-<body>
+<body style="font-family: 'NanumBarunpenR'">
 
 
 {% include 'header.html' %}
