add delete view

--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -18,6 +18,11 @@
                     Change Password
                 </a>
             </div>
+            <div>
+                <a href="{% url 'accountapp:delete' pk=target_user.pk %}">
+                    Delete Account
+                </a>
+            </div>
         </div>
 
     </div>
