disable id update

--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -13,6 +13,8 @@
             <div>
                 {{ target_user.date_joined }}
             </div>
+
+            {% if user == target_user %}
             <div>
                 <a href="{% url 'accountapp:update' pk=target_user.pk %}">
                     Change Password
@@ -23,6 +25,7 @@
                     Delete Account
                 </a>
             </div>
+            {% endif %}
         </div>
 
     </div>
