--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -6,8 +6,19 @@
 
     <div class="text-center mw-500 m-auto">
         <div class="m-5">
-            <h4>Detail</h4>
-            <h5>{{ target_user.username }}</h5>
+            {% if target_user.profile %}
+                <img src="{{ target_user.profile.image.url }}"
+                     class="profile_image m-4"
+                     alt="profile image">
+            <h2 class="NNB_B">{{ target_user.profile.nickname }}</h2>
+            <h5>{{ target_user.profile.message }}</h5>
+            {% else %}
+            <h2>
+                <a href="{% url 'profileapp:create' %}">
+                    Create Profile
+                </a>
+            </h2>
+            {% endif %}
         </div>
         <div>
             <div>
