--- a/static/base.css
+++ b/static/base.css
@@ -18,3 +18,14 @@
     max-width: 500px;
     padding: 1rem 1.5rem;
 }
+
+.profile_image {
+    height: 12rem;
+    width: 12rem;
+    border-radius: 20rem;
+    object-fit: cover;
+}
+
+.NNB_B {
+    font-family: "NanumBarunpenB", cursive;
+}
