add profile update icon

--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -13,7 +13,8 @@
             <h2 class="NNB_B">
                 {{ target_user.profile.nickname }}
                 {% if target_user == user %}
-                    <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+                    <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}"
+                        class="material-icons round_button">
                         edit
                     </a>
                 {% endif %}
