--- a/templates/head.html
+++ b/templates/head.html
@@ -15,6 +15,10 @@
     {#  DEFALUT CSS LINK  #}
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 
+    {#  MATERIAL ICONS LINK  #}
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet">
+
     {#  Naver Font LINK  #}
     <style>
         {#  NanumSquare  #}
