--- a/static/base.css
+++ b/static/base.css
@@ -29,3 +29,15 @@
 .NNB_B {
     font-family: "NanumBarunpenB", cursive;
 }
+
+.round_button {
+    color:black;
+    text-decoration: none;
+    box-shadow: 0 0 3px black;
+    border-radius: 20rem;
+    padding: 0.3rem;
+}
+
+.round_button:hover {
+    color:dimgray;
+}
