add article delete view

--- a/articleapp/templates/articleapp/create.html
+++ b/articleapp/templates/articleapp/create.html
@@ -12,14 +12,14 @@
             <form action="{% url 'articleapp:create' %}"
                   method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-
+{#                UserCreationForm 호출 #}
+{#                {{ form }}#}
                 {% bootstrap_form form %}
                 <div class="m-5">
                     <input type="submit" class="btn btn-dark rounded-pill px-5">
                 </div>
             </form>
         </div>
-
     </div>
 
 {% endblock %}
