--- a/articleapp/templates/articleapp/delete.html
+++ b/articleapp/templates/articleapp/delete.html
@@ -2,20 +2,22 @@
 
 {% block content %}
 
+
     <div class="text-center mw-500 m-auto">
         <div class="m-5">
-            <h4>Update Article</h4>
+            <h4>Delete Article : {{ target_article.title }}</h4>
         </div>
         <div>
-            <form action="{% url 'articleapp:update' pk=target_article.pk%}"
+            <form action="{% url 'articleapp:delete' pk=target_article.pk %}"
                   method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="m-5">
-                    <input type="submit" class="btn btn-dark rounded-pill px-5">
+                    <input type="submit"
+                       class="btn btn-danger rounded-pill px-5">
                 </div>
             </form>
         </div>
-
     </div>
+
 
 {% endblock %}
