--- a/static/base.css
+++ b/static/base.css
@@ -41,3 +41,14 @@
 .round_button:hover {
     color:dimgray;
 }
+
+.article_content {
+    text-align: left;
+    font-size: 1.1rem;
+}
+
+.article_image {
+    border-radius: 2rem;
+    width: 60%;
+    box-shadow: 0 0 1rem darkgray;
+}
