--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -7,11 +7,12 @@
     <style>
         .container div {
           width: 280px;
-          background-color: antiquewhite;
           display: flex;
           justify-content: center;
           align-items: center;
           border-radius: 1rem;
+          flex-direction: column;
+          box-shadow: 0 0 1rem lightgray;
         }
         .container img {
             width: 100%;
@@ -21,45 +22,16 @@
     </style>
 
     <div class="container my-4">
-        <div class="item1">
-            <img src="https://picsum.photos/200/300" alt="">
-        </div>
-        <div class="item2">
-            <img src="https://picsum.photos/200/340" alt="">
-        </div>
-        <div class="item3">
-            <img src="https://picsum.photos/200/380" alt="">
-        </div>
-        <div class="item4">
-            <img src="https://picsum.photos/200/420" alt="">
-        </div>
-        <div class="item5">
-            <img src="https://picsum.photos/200/320" alt="">
-        </div>
-        <div class="item6">
-            <img src="https://picsum.photos/200/333" alt="">
-        </div>
-        <div class="item7">
-            <img src="https://picsum.photos/200/344" alt="">
-        </div>
-        <div class="item8">
-            <img src="https://picsum.photos/200/410" alt="">
-        </div>
-        <div class="item9">
-            <img src="https://picsum.photos/200/390" alt="">
-        </div>
-        <div class="item10">
-            <img src="https://picsum.photos/200/370" alt="">
-        </div>
-        <div class="item11">
-            <img src="https://picsum.photos/200/377" alt="">
-        </div>
-        <div class="item12">
-            <img src="https://picsum.photos/200/310" alt="">
-        </div>
-        <div class="item13">
-            <img src="https://picsum.photos/200/345" alt="">
-        </div>
+        {% for article in article_list %}
+
+            <div>
+                <a href="{% url 'articleapp:detail' pk=article.pk %}">
+                    <img src="{{ article.image.url }}" alt="">
+                </a>
+                <span class="my-2">{{ article.title }}</span>
+            </div>
+
+        {% endfor %}
     </div>
 
     <script src="{% static 'js/magicgrid.js' %}"></script>
