--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,11 @@
         <h1>Up & Down</h1>
     </div>
     <div class="main_header_button">
-        <span>nav1</span>
+        <span>
+            <a href="{% url 'articleapp:list' %}">
+                Articles
+            </a>
+        </span>
         <span>nav2</span>
         {% if not user.is_authenticated %}
         <span>
