--- a/commentapp/templates/commentapp/create.html
+++ b/commentapp/templates/commentapp/create.html
@@ -9,6 +9,11 @@
                 {% csrf_token %}
 
                 {% bootstrap_form form %}
+
+                <input type="hidden"
+                       name="article_pk"
+                       value="{{ target_article.pk }}">
+
                 <div class="m-5">
                     <input type="submit" class="btn btn-dark rounded-pill px-5">
                 </div>
