--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -42,8 +42,27 @@
         <hr>
 
         <div class="text-center my-4">
-            {#     댓글 내용, 댓글 작성창       #}
 
+            {% for comment in target_article.comment.all %}
+
+            <div class="comment_box">
+                <div>
+                    <span class="NNB_B"
+                          style="font-size: 1.3rem;">
+                        {{ comment.writer.profile.nickname }}
+                    </span>
+                        {{ comment.created_at }}
+                </div>
+                <div>
+                    <p>
+                        {{ comment.content }}
+                    </p>
+                </div>
+            </div>
+
+            {% endfor %}
+
+            {#     댓글 작성창       #}
             {% include 'commentapp/create.html' %}
 
         </div>
