mobile view setting

--- a/templates/head.html
+++ b/templates/head.html
@@ -2,6 +2,10 @@
 
 <head>
     <meta charset="UTF-8">
+
+    {#  Mobile View Setting  #}
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Title</title>
 
     {#  BOOTSTRAP LINK  #}
