--- a/projectapp/templates/projectapp/list.html
+++ b/projectapp/templates/projectapp/list.html
@@ -10,17 +10,17 @@
             margin: 0 auto;
         }
         .container div {
-          width: 45%;
-          max-width: 250px;
           display: flex;
           justify-content: center;
           align-items: center;
           border-radius: 1rem;
           flex-direction: column;
-          box-shadow: 0 0 1rem lightgray;
+          {#box-shadow: 0 0 1rem lightgray;#}
         }
         .container img {
-            width: 100%;
+            width: 7rem;
+            height: 7rem;
+            object-fit: cover;
             border-radius: 1rem;
         }
 
@@ -33,7 +33,7 @@
                 <a href="{% url 'projectapp:detail' pk=project.pk %}">
                     <img src="{{ project.image.url }}" alt="">
                 </a>
-                <span class="my-2">{{ project.name }}</span>
+                <span class="my-2">{{ project.name | truncatechars:10 }}</span>
             </div>
 
         {% endfor %}
