--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -21,4 +21,8 @@
 
     </div>
 
+    <div>
+        {% include 'snippets/list_fragment.html' with article_list=object_list %}
+    </div>
+
 {% endblock %}
