--- a/articleapp/templates/articleapp/update.html
+++ b/articleapp/templates/articleapp/update.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load bootstrap4 %}
+
 {% block content %}
 
     <div class="text-center mw-500 m-auto">
@@ -10,6 +12,7 @@
             <form action="{% url 'articleapp:update' pk=target_article.pk%}"
                   method="post" enctype="multipart/form-data">
                 {% csrf_token %}
+                {% bootstrap_form form %}
                 <div class="m-5">
                     <input type="submit" class="btn btn-dark rounded-pill px-5">
                 </div>
