--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -19,11 +19,21 @@
     </div>
 
     <div class="text-center">
-        <a href="{% url 'subscribeapp:subscribe' project_pk=target_project.pk %}"
-           class="btn btn-primary rounded-pill px-5">
-            Subscribe
-        </a>
+    {% if user.is_authenticated %}
+        {% if not subscription %}
+            <a href="{% url 'subscribeapp:subscribe' project_pk=target_project.pk %}"
+               class="btn btn-primary rounded-pill px-5">
+                Subscribe
+            </a>
+        {% else %}
+            <a href="{% url 'subscribeapp:subscribe' project_pk=target_project.pk %}"
+               class="btn btn-secondary rounded-pill px-5">
+                Unsubscribe
+            </a>
+        {% endif %}
+    {% endif %}
     </div>
+
     <div>
         {% include 'snippets/list_fragment.html' with article_list=object_list %}
     </div>
