--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -31,7 +31,7 @@
                  alt="">
 
             <div class="my-5 article_content">
-                {{ target_article.content }}
+                {{ target_article.content | safe }}
             </div>
 
             {% if target_article.writer == user %}
